# DirectML-ESG-RAG

./: .env.example  .gitignore  PROJECT_GUIDELINES.md  QUICK_SCREENSHOT_GUIDE.md  README.md  SCREENSHOT_GUIDE.md  TESTING_GUIDE.md  main.py  plan.md  pyproject.toml  requirements.txt  test.ipynb
config/: settings.json
data/: BITS_WILP_Multimodal_RAG_Assignment.docx  assignment.md
scripts/: evaluate.py  setup_model.py
src/: __init__.py
src/api/: __init__.py  routes.py
src/api/static/: index.html
src/ingestion/: __init__.py  processor.py
src/models/: __init__.py  gemini_client.py  local_llm.py
src/retrieval/: __init__.py  engine.py  vector_store.py
src/utils/: __init__.py  logger.py  state_manager.py
tests/: test_api.py
