[project]
name = "directml-esg-rag"
version = "0.1.0"
description = "A local Retrieval-Augmented Generation (RAG) system optimized for AMD GPUs using DirectML. Built to extract and summarize exhaustive diagnostic procedures from complex automotive technical manuals."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.3.0",
    "chromadb>=1.5.5",
    "fastapi>=0.135.3",
    "langchain-google-genai>=4.2.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "unstructured[pdf]>=0.22.12",
    "uvicorn>=0.42.0",
]
